# vala-gir-parser

./: .gitignore  README.md  meson.build  metadata-attributes.md
.github/workflows/: publish-docs.yml
docs/: meson.build  valagir.toml
src/: array.vala  bitfield.vala  boxed.vala  c-include.vala  callable-attrs.vala  callback.vala  class.vala  datatype-builder.vala  doc-deprecated.vala  doc.vala  docsection.vala  enumeration.vala  enums.vala  field.vala  gir-parser.vala  gir-visitor.vala  implements.vala  interface.vala  main.vala  member.vala  namespace.vala  package.vala  parameters.vala  record.vala  source-position.vala  transformations.vala  type.vala  util.vala  vapi-builder.vala  vapigen.vala
src/builders/: alias-builder.vala  boxed-builder.vala  callable-builder.vala  class-builder.vala  constant-builder.vala  datatype-builder.vala  delegate-builder.vala  enum-builder.vala  error-domain-builder.vala  field-builder.vala  identifier-builder.vala  info-attrs-builder.vala  interface-builder.vala  method-builder.vala  namespace-builder.vala  parameters-builder.vala  property-builder.vala  struct-builder.vala  type-builder.vala  typed-value-builder.vala
src/gir/: alias.vala  anonymous-record.vala  any-type.vala  array.vala  attribute.vala  bitfield.vala  boxed.vala  c-identifier-resolver.vala  c-include.vala  callable-attrs.vala  callable.vala  callback.vala  class.vala  constant.vala  constructor.vala  context.vala  doc-deprecated.vala  doc-elements.vala  doc-format.vala  doc-stability.vala  doc-version.vala  doc.vala  docsection.vala  enum-base.vala  enumeration.vala  enums.vala  field.vala  filtered-node-list.vala  foreach-visitor.vala  function-inline.vala  function-macro.vala  function.vala  glib-boxed.vala  glib-signal.vala  identifier.vala  implements.vala  include.vala  info-attrs.vala  info-elements.vala  instance-parameter.vala  (+29 more)
src/gir-metadata/: argument-type.vala  argument.vala  metadata-parser.vala  metadata-processor.vala  metadata-set.vala  metadata-to-gir.vala  metadata.vala
src/gir/metadata/: matcher.vala  parser.vala  preprocessor.vala  rule.vala  scanner.vala  token-type.vala  token.vala
src/gir/xml/: reader.vala  reference.vala  report.vala  source-location.vala  writer.vala
src/transformations/: function-to-method.vala  out-arg-to-return-value.vala  ref-instance-param.vala  remove-first-vararg.vala  transformation.vala
