project('vala-gir-parser', 'vala', 'c',
		version: '0.0.1',
		license: 'LGPL')

add_project_arguments('-Wno-discarded-qualifiers', language: 'c')
add_project_arguments('-Wno-unused-variable', language: 'c')
add_project_arguments('-Wno-unused-but-set-variable', language: 'c')

dependencies = [
    dependency('glib-2.0', version: '>=2.70'),
    dependency('gobject-2.0'),
    dependency('libvala-0.56'),
]

sources = files(
		'src/gir-parser.vala',
		'src/vapigen.vala',
		'src/builders/boxed-builder.vala',
		'src/builders/class-builder.vala',
		'src/builders/constant-builder.vala',
		'src/builders/datatype-builder.vala',
		'src/builders/enum-builder.vala',
		'src/builders/field-builder.vala',
		'src/builders/identifier-builder.vala',
		'src/builders/info-attrs-builder.vala',
		'src/builders/interface-builder.vala',
		'src/builders/method-builder.vala',
		'src/builders/namespace-builder.vala',
		'src/builders/parameters-builder.vala',
		'src/builders/property-builder.vala',
		'src/builders/struct-builder.vala',
		'src/gir/alias.vala',
		'src/gir/any-type.vala',
		'src/gir/array.vala',
		'src/gir/attribute.vala',
		'src/gir/bitfield.vala',
		'src/gir/boxed.vala',
		'src/gir/callable.vala',
		'src/gir/callable-attrs.vala',
		'src/gir/callback.vala',
		'src/gir/c-include.vala',
		'src/gir/class.vala',
		'src/gir/constant.vala',
		'src/gir/constructor.vala',
		'src/gir/doc.vala',
		'src/gir/doc-deprecated.vala',
		'src/gir/docsection.vala',
		'src/gir/doc-stability.vala',
		'src/gir/doc-version.vala',
		'src/gir/enum-base.vala',
		'src/gir/enumeration.vala',
		'src/gir/enums.vala',
		'src/gir/field.vala',
		'src/gir/filtered-node-list.vala',
		'src/gir/function.vala',
		'src/gir/function-inline.vala',
		'src/gir/function-macro.vala',
		'src/gir/identifier.vala',
		'src/gir/implements.vala',
		'src/gir/include.vala',
		'src/gir/instance-parameter.vala',
		'src/gir/interface.vala',
		'src/gir/info-attrs.vala',
		'src/gir/info-elements.vala',
		'src/gir/member.vala',
		'src/gir/method.vala',
		'src/gir/method-inline.vala',
		'src/gir/namespace.vala',
		'src/gir/node.vala',
		'src/gir/parameter.vala',
		'src/gir/parameters.vala',
		'src/gir/parser.vala',
		'src/gir/package.vala',
		'src/gir/prerequisite.vala',
		'src/gir/property.vala',
		'src/gir/record.vala',
		'src/gir/repository.vala',
		'src/gir/return-value.vala',
		'src/gir/signal.vala',
		'src/gir/source-position.vala',
		'src/gir/type.vala',
		'src/gir/varargs.vala',
		'src/gir/virtual-method.vala',
		'src/gir/union.vala',
		'src/gir-metadata/argument-type.vala',
		'src/gir-metadata/argument.vala',
		'src/gir-metadata/metadata-parser.vala',
		'src/gir-metadata/metadata-processor.vala',
		'src/gir-metadata/metadata-set.vala',
		'src/gir-metadata/metadata.vala',
		'src/transformations/transformation.vala',
		'src/transformations/function-to-method.vala',
		'src/transformations/out-arg-to-return-value.vala',
		'src/transformations/ref-instance-param.vala',
		'src/transformations/remove-first-vararg.vala'
)

executable('vapigen', sources, dependencies: dependencies)
