project('vala-gir-parser', 'vala', 'c',
        version: '0.0.1',
        license: 'LGPL')

add_project_arguments('-Wno-discarded-qualifiers', language: 'c')
add_project_arguments('-Wno-unused-variable', language: 'c')
add_project_arguments('-Wno-unused-but-set-variable', language: 'c')

dependencies = [
    dependency('glib-2.0', version: '>=2.70'),
    dependency('gobject-2.0'),
    dependency('gio-2.0'),
    dependency('gee-0.8'),
    dependency('libvala-0.56'),
]

sources = files(
        'src/datatype-builder.vala',
        'src/gir-parser.vala',
        'src/vapigen.vala',
        'src/vapi-builder.vala',
        'src/gir/anonymous-record.vala',
        'src/gir/alias.vala',
        'src/gir/any-type.vala',
        'src/gir/array.vala',
        'src/gir/attribute.vala',
        'src/gir/bitfield.vala',
        'src/gir/c-include.vala',
        'src/gir/callable-attrs.vala',
        'src/gir/callable.vala',
        'src/gir/callback.vala',
        'src/gir/context.vala',
        'src/gir/class.vala',
        'src/gir/constant.vala',
        'src/gir/constructor.vala',
        'src/gir/doc-deprecated.vala',
        'src/gir/doc-elements.vala',
        'src/gir/doc-format.vala',
        'src/gir/doc-stability.vala',
        'src/gir/doc-version.vala',
        'src/gir/doc.vala',
        'src/gir/docsection.vala',
        'src/gir/enum-base.vala',
        'src/gir/enumeration.vala',
        'src/gir/enums.vala',
        'src/gir/field.vala',
        'src/gir/foreach-visitor.vala',
        'src/gir/function-inline.vala',
        'src/gir/function-macro.vala',
        'src/gir/function.vala',
        'src/gir/glib-boxed.vala',
        'src/gir/glib-signal.vala',
        'src/gir/identifier.vala',
        'src/gir/identifier.vala',
        'src/gir/implements.vala',
        'src/gir/include.vala',
        'src/gir/info-attrs.vala',
        'src/gir/info-elements.vala',
        'src/gir/instance-parameter.vala',
        'src/gir/interface.vala',
        'src/gir/link.vala',
        'src/gir/member.vala',
        'src/gir/method-inline.vala',
        'src/gir/method.vala',
        'src/gir/named.vala',
        'src/gir/namespace.vala',
        'src/gir/node.vala',
        'src/gir/package.vala',
        'src/gir/parameter.vala',
        'src/gir/parameters.vala',
        'src/gir/parser.vala',
        'src/gir/prerequisite.vala',
        'src/gir/property.vala',
        'src/gir/record.vala',
        'src/gir/repository.vala',
        'src/gir/resolver.vala',
        'src/gir/return-value.vala',
        'src/gir/source-position.vala',
        'src/gir/type.vala',
        'src/gir/union.vala',
        'src/gir/varargs.vala',
        'src/gir/virtual-method.vala',
        'src/gir/visitor.vala',
        'src/gir/metadata/parser.vala',
        'src/gir/metadata/preprocessor.vala',
        'src/gir/metadata/rule.vala',
        'src/gir/xml/report.vala',
        'src/gir/xml/source-location.vala',
        'src/gir/xml/reader.vala',
        'src/gir/xml/reference.vala',
        'src/gir/xml/writer.vala',
)

executable('vapigen', sources, dependencies: dependencies)
